# weather-research

./: .gitignore  CALIBRATION_GUIDE.md  CURRENT_OBSERVATION_FEATURES.md  DATA.md  FORECAST_FEATURES.md  POLYMARKET_11AM_ML_DEPLOYMENT_PROMPT.md  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
config/: manual_station_overrides.yaml  settings.yaml
notebooks/: README.md  calibration_ml_walkforward.ipynb  exploratory_analysis.ipynb
notebooks/station_stacking/: generate_station_notebooks.py  stacking_KATL.ipynb  stacking_KAUS.ipynb  stacking_KDAL.ipynb  stacking_KHOU.ipynb  stacking_KLAX.ipynb  stacking_KLGA.ipynb  stacking_KMIA.ipynb  (+2 more)
src/: __init__.py  actuals_fetch.py  analysis.py  backfill_direct_nbm.py  backfill_mostlyright_actuals.py  backfill_mostlyright_current_observations.py  backfill_mostlyright_nwp.py  backfill_mostlyright_sdk_nwp.py  bucket_probs.py  build_calibration_dataset.py  current_observations.py  export_station_stacking_v2_models.py  features.py  hrrr_fetch.py  inspect_mostlyright_sdk.py  join_data.py  main.py  merge_direct_nbm_shards.py  merge_sdk_nwp_shards.py  metrics.py  nws_fetch.py  openmeteo_fetch.py  plots.py  polymarket_fetch.py  polymarket_parse.py  station_registry.py  train_calibration_models.py  verify_sdk_coverage.py  write_calibration_report.py
tests/: test_bucket_probs.py  test_calibration_rebuild.py  test_current_observations.py  test_hrrr_fetch.py  test_metrics.py  test_nbm_fetch.py  test_polymarket_parse.py  test_sdk_pipeline.py  test_station_mapping.py  test_station_stacking.py  test_timezones.py
(+17 files in other folders)
