[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-research"
version = "0.1.0"
description = "Research pipeline for daily high-temperature forecast calibration and station-stacking experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.32",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "plotly>=5.22",
    "xarray>=2024.3",
    "cfgrib>=0.9.10",
    "eccodes>=1.7",
    "ecmwflibs>=0.6",
    "timezonefinder>=6.5",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "optuna>=3.6",
    "mostlyrightmd[research]>=1.0,<2.0",
    "mostlyrightmd-weather[nwp]>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.setuptools.packages.find]
include = ["src*"]
